Fixed alignment problem w. search bar submit buttons

--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -299,6 +299,7 @@ margin-right:1em;
 /*   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7)); */
 /*   background: -moz-linear-gradient(top, #3e779d, #65a9d7); */
    padding: .5em .5em;
+   margin-top: -7px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
